InterprMEPA-2.0/leMepa.output
Grammar

    0 $accept: linhas $end

    1 linhas: linhas linha
    2       | linha

    3 linha: rot comando

    4 $@1: ε

    5 rot: ROTULO $@1 DOIS_PONTOS
    6    | ε

    7 virgula: VIRGULA
    8        | ε

    9 comando: cmd_sem_param
   10        | cmd_um_param_int param1_int
   11        | cmd_um_param_rot param1_rot
   12        | cmd_dois_param_int param1_int virgula param2_int
   13        | CHPR param1_rot virgula param2_int
   14        | DSVR param1_rot virgula param2_int virgula param3_int

   15 cmd_sem_param: INPP
   16              | PARA
   17              | SOMA
   18              | SUBT
   19              | MULT
   20              | DIVI
   21              | INVR
   22              | CONJ
   23              | DISJ
   24              | NEGA
   25              | CMME
   26              | CMMA
   27              | CMIG
   28              | CMDG
   29              | CMEG
   30              | CMAG
   31              | NADA
   32              | LEIT
   33              | IMPR

   34 cmd_um_param_int: CRCT
   35                 | AMEM
   36                 | DMEM
   37                 | ENPR

   38 cmd_um_param_rot: DSVS
   39                 | DSVF

   40 cmd_dois_param_int: CRVL
   41                   | ARMZ
   42                   | CRVI
   43                   | ARMI
   44                   | CREN
   45                   | ENRT
   46                   | RTPR

   47 param1_int: INTEIRO

   48 param2_int: INTEIRO

   49 param3_int: INTEIRO

   50 param1_rot: ROTULO


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    DOIS_PONTOS (258) 5
    ROTULO (259) 5 50
    INTEIRO (260) 47 48 49
    VIRGULA (261) 7
    INPP (262) 15
    PARA (263) 16
    SOMA (264) 17
    SUBT (265) 18
    MULT (266) 19
    DIVI (267) 20
    INVR (268) 21
    CONJ (269) 22
    DISJ (270) 23
    NEGA (271) 24
    CMME (272) 25
    CMMA (273) 26
    CMIG (274) 27
    CMDG (275) 28
    CMEG (276) 29
    CMAG (277) 30
    NADA (278) 31
    LEIT (279) 32
    IMPR (280) 33
    CRCT (281) 34
    AMEM (282) 35
    DMEM (283) 36
    ENPR (284) 37
    ENRT (285) 45
    DSVS (286) 38
    DSVF (287) 39
    CRVL (288) 40
    ARMZ (289) 41
    CRVI (290) 42
    ARMI (291) 43
    CREN (292) 44
    CHPR (293) 13
    RTPR (294) 46
    DSVR (295) 14


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    linhas (42)
        on left: 1 2
        on right: 0 1
    linha (43)
        on left: 3
        on right: 1 2
    rot (44)
        on left: 5 6
        on right: 3
    $@1 (45)
        on left: 4
        on right: 5
    virgula (46)
        on left: 7 8
        on right: 12 13 14
    comando (47)
        on left: 9 10 11 12 13 14
        on right: 3
    cmd_sem_param (48)
        on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
        on right: 9
    cmd_um_param_int (49)
        on left: 34 35 36 37
        on right: 10
    cmd_um_param_rot (50)
        on left: 38 39
        on right: 11
    cmd_dois_param_int (51)
        on left: 40 41 42 43 44 45 46
        on right: 12
    param1_int (52)
        on left: 47
        on right: 10 12
    param2_int (53)
        on left: 48
        on right: 12 13 14
    param3_int (54)
        on left: 49
        on right: 14
    param1_rot (55)
        on left: 50
        on right: 11 13 14


State 0

    0 $accept: • linhas $end

    ROTULO  shift, and go to state 1

    $default  reduce using rule 6 (rot)

    linhas  go to state 2
    linha   go to state 3
    rot     go to state 4


State 1

    5 rot: ROTULO • $@1 DOIS_PONTOS

    $default  reduce using rule 4 ($@1)

    $@1  go to state 5


State 2

    0 $accept: linhas • $end
    1 linhas: linhas • linha

    $end    shift, and go to state 6
    ROTULO  shift, and go to state 1

    $default  reduce using rule 6 (rot)

    linha  go to state 7
    rot    go to state 4


State 3

    2 linhas: linha •

    $default  reduce using rule 2 (linhas)


State 4

    3 linha: rot • comando

    INPP  shift, and go to state 8
    PARA  shift, and go to state 9
    SOMA  shift, and go to state 10
    SUBT  shift, and go to state 11
    MULT  shift, and go to state 12
    DIVI  shift, and go to state 13
    INVR  shift, and go to state 14
    CONJ  shift, and go to state 15
    DISJ  shift, and go to state 16
    NEGA  shift, and go to state 17
    CMME  shift, and go to state 18
    CMMA  shift, and go to state 19
    CMIG  shift, and go to state 20
    CMDG  shift, and go to state 21
    CMEG  shift, and go to state 22
    CMAG  shift, and go to state 23
    NADA  shift, and go to state 24
    LEIT  shift, and go to state 25
    IMPR  shift, and go to state 26
    CRCT  shift, and go to state 27
    AMEM  shift, and go to state 28
    DMEM  shift, and go to state 29
    ENPR  shift, and go to state 30
    ENRT  shift, and go to state 31
    DSVS  shift, and go to state 32
    DSVF  shift, and go to state 33
    CRVL  shift, and go to state 34
    ARMZ  shift, and go to state 35
    CRVI  shift, and go to state 36
    ARMI  shift, and go to state 37
    CREN  shift, and go to state 38
    CHPR  shift, and go to state 39
    RTPR  shift, and go to state 40
    DSVR  shift, and go to state 41

    comando             go to state 42
    cmd_sem_param       go to state 43
    cmd_um_param_int    go to state 44
    cmd_um_param_rot    go to state 45
    cmd_dois_param_int  go to state 46


State 5

    5 rot: ROTULO $@1 • DOIS_PONTOS

    DOIS_PONTOS  shift, and go to state 47


State 6

    0 $accept: linhas $end •

    $default  accept


State 7

    1 linhas: linhas linha •

    $default  reduce using rule 1 (linhas)


State 8

   15 cmd_sem_param: INPP •

    $default  reduce using rule 15 (cmd_sem_param)


State 9

   16 cmd_sem_param: PARA •

    $default  reduce using rule 16 (cmd_sem_param)


State 10

   17 cmd_sem_param: SOMA •

    $default  reduce using rule 17 (cmd_sem_param)


State 11

   18 cmd_sem_param: SUBT •

    $default  reduce using rule 18 (cmd_sem_param)


State 12

   19 cmd_sem_param: MULT •

    $default  reduce using rule 19 (cmd_sem_param)


State 13

   20 cmd_sem_param: DIVI •

    $default  reduce using rule 20 (cmd_sem_param)


State 14

   21 cmd_sem_param: INVR •

    $default  reduce using rule 21 (cmd_sem_param)


State 15

   22 cmd_sem_param: CONJ •

    $default  reduce using rule 22 (cmd_sem_param)


State 16

   23 cmd_sem_param: DISJ •

    $default  reduce using rule 23 (cmd_sem_param)


State 17

   24 cmd_sem_param: NEGA •

    $default  reduce using rule 24 (cmd_sem_param)


State 18

   25 cmd_sem_param: CMME •

    $default  reduce using rule 25 (cmd_sem_param)


State 19

   26 cmd_sem_param: CMMA •

    $default  reduce using rule 26 (cmd_sem_param)


State 20

   27 cmd_sem_param: CMIG •

    $default  reduce using rule 27 (cmd_sem_param)


State 21

   28 cmd_sem_param: CMDG •

    $default  reduce using rule 28 (cmd_sem_param)


State 22

   29 cmd_sem_param: CMEG •

    $default  reduce using rule 29 (cmd_sem_param)


State 23

   30 cmd_sem_param: CMAG •

    $default  reduce using rule 30 (cmd_sem_param)


State 24

   31 cmd_sem_param: NADA •

    $default  reduce using rule 31 (cmd_sem_param)


State 25

   32 cmd_sem_param: LEIT •

    $default  reduce using rule 32 (cmd_sem_param)


State 26

   33 cmd_sem_param: IMPR •

    $default  reduce using rule 33 (cmd_sem_param)


State 27

   34 cmd_um_param_int: CRCT •

    $default  reduce using rule 34 (cmd_um_param_int)


State 28

   35 cmd_um_param_int: AMEM •

    $default  reduce using rule 35 (cmd_um_param_int)


State 29

   36 cmd_um_param_int: DMEM •

    $default  reduce using rule 36 (cmd_um_param_int)


State 30

   37 cmd_um_param_int: ENPR •

    $default  reduce using rule 37 (cmd_um_param_int)


State 31

   45 cmd_dois_param_int: ENRT •

    $default  reduce using rule 45 (cmd_dois_param_int)


State 32

   38 cmd_um_param_rot: DSVS •

    $default  reduce using rule 38 (cmd_um_param_rot)


State 33

   39 cmd_um_param_rot: DSVF •

    $default  reduce using rule 39 (cmd_um_param_rot)


State 34

   40 cmd_dois_param_int: CRVL •

    $default  reduce using rule 40 (cmd_dois_param_int)


State 35

   41 cmd_dois_param_int: ARMZ •

    $default  reduce using rule 41 (cmd_dois_param_int)


State 36

   42 cmd_dois_param_int: CRVI •

    $default  reduce using rule 42 (cmd_dois_param_int)


State 37

   43 cmd_dois_param_int: ARMI •

    $default  reduce using rule 43 (cmd_dois_param_int)


State 38

   44 cmd_dois_param_int: CREN •

    $default  reduce using rule 44 (cmd_dois_param_int)


State 39

   13 comando: CHPR • param1_rot virgula param2_int

    ROTULO  shift, and go to state 48

    param1_rot  go to state 49


State 40

   46 cmd_dois_param_int: RTPR •

    $default  reduce using rule 46 (cmd_dois_param_int)


State 41

   14 comando: DSVR • param1_rot virgula param2_int virgula param3_int

    ROTULO  shift, and go to state 48

    param1_rot  go to state 50


State 42

    3 linha: rot comando •

    $default  reduce using rule 3 (linha)


State 43

    9 comando: cmd_sem_param •

    $default  reduce using rule 9 (comando)


State 44

   10 comando: cmd_um_param_int • param1_int

    INTEIRO  shift, and go to state 51

    param1_int  go to state 52


State 45

   11 comando: cmd_um_param_rot • param1_rot

    ROTULO  shift, and go to state 48

    param1_rot  go to state 53


State 46

   12 comando: cmd_dois_param_int • param1_int virgula param2_int

    INTEIRO  shift, and go to state 51

    param1_int  go to state 54


State 47

    5 rot: ROTULO $@1 DOIS_PONTOS •

    $default  reduce using rule 5 (rot)


State 48

   50 param1_rot: ROTULO •

    $default  reduce using rule 50 (param1_rot)


State 49

   13 comando: CHPR param1_rot • virgula param2_int

    VIRGULA  shift, and go to state 55

    $default  reduce using rule 8 (virgula)

    virgula  go to state 56


State 50

   14 comando: DSVR param1_rot • virgula param2_int virgula param3_int

    VIRGULA  shift, and go to state 55

    $default  reduce using rule 8 (virgula)

    virgula  go to state 57


State 51

   47 param1_int: INTEIRO •

    $default  reduce using rule 47 (param1_int)


State 52

   10 comando: cmd_um_param_int param1_int •

    $default  reduce using rule 10 (comando)


State 53

   11 comando: cmd_um_param_rot param1_rot •

    $default  reduce using rule 11 (comando)


State 54

   12 comando: cmd_dois_param_int param1_int • virgula param2_int

    VIRGULA  shift, and go to state 55

    $default  reduce using rule 8 (virgula)

    virgula  go to state 58


State 55

    7 virgula: VIRGULA •

    $default  reduce using rule 7 (virgula)


State 56

   13 comando: CHPR param1_rot virgula • param2_int

    INTEIRO  shift, and go to state 59

    param2_int  go to state 60


State 57

   14 comando: DSVR param1_rot virgula • param2_int virgula param3_int

    INTEIRO  shift, and go to state 59

    param2_int  go to state 61


State 58

   12 comando: cmd_dois_param_int param1_int virgula • param2_int

    INTEIRO  shift, and go to state 59

    param2_int  go to state 62


State 59

   48 param2_int: INTEIRO •

    $default  reduce using rule 48 (param2_int)


State 60

   13 comando: CHPR param1_rot virgula param2_int •

    $default  reduce using rule 13 (comando)


State 61

   14 comando: DSVR param1_rot virgula param2_int • virgula param3_int

    VIRGULA  shift, and go to state 55

    $default  reduce using rule 8 (virgula)

    virgula  go to state 63


State 62

   12 comando: cmd_dois_param_int param1_int virgula param2_int •

    $default  reduce using rule 12 (comando)


State 63

   14 comando: DSVR param1_rot virgula param2_int virgula • param3_int

    INTEIRO  shift, and go to state 64

    param3_int  go to state 65


State 64

   49 param3_int: INTEIRO •

    $default  reduce using rule 49 (param3_int)


State 65

   14 comando: DSVR param1_rot virgula param2_int virgula param3_int •

    $default  reduce using rule 14 (comando)
